--- a/NongSanShop/Views/Blog/Index.cshtml
+++ b/NongSanShop/Views/Blog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<NongSanShop.Models.dh_blog>
+﻿@using NongSanShop.Common
+@model IEnumerable<NongSanShop.Models.dh_blog>
 
 @{
     ViewBag.Title = "Bài viết";
@@ -56,10 +57,20 @@
                                     @Html.DisplayFor(modelItem => item.thumbnail)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.created)
+                                    @{
+                                        if (item.created.GetValueOrDefault() > 0)
+                                        {
+                                            @DateTimeOffset.FromUnixTimeSeconds(item.created.GetValueOrDefault()).ToString(Constants.DateTimePattern.DefaultDateTimePattern)
+                                        }
+                                    }
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.updated)
+                                    @{
+                                        if (item.updated.GetValueOrDefault() > 0)
+                                        {
+                                            @DateTimeOffset.FromUnixTimeSeconds(item.updated.GetValueOrDefault()).ToString(Constants.DateTimePattern.DefaultDateTimePattern)
+                                        }
+                                    }
                                 </td>
                                 <td>
                                     @Html.ActionLink("Sửa", "Edit", new { id = item.id }) |
