--- a/NongSanShop/Views/Cart/Index.cshtml
+++ b/NongSanShop/Views/Cart/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<NongSanShop.Models.dh_cart>
+﻿@using NongSanShop.Common
+@model IEnumerable<NongSanShop.Models.dh_cart>
 
 @{
     ViewBag.Title = "Gio hàng";
@@ -75,14 +76,18 @@
                                 </td>
                                 <td>
                                     @{
-                                        var timeStampCreated = item.created;
-                                        @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampCreated.GetValueOrDefault()).ToString())
+                                        if (item.created.GetValueOrDefault() > 0)
+                                        {
+                                            @DateTimeOffset.FromUnixTimeSeconds(item.created.GetValueOrDefault()).ToString(Constants.DateTimePattern.DefaultDateTimePattern)
+                                        }
                                     }
                                 </td>
                                 <td>
                                     @{
-                                        var timeStampUpdated = item.updated;
-                                        @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampUpdated.GetValueOrDefault()).ToString())
+                                        if (item.updated.GetValueOrDefault() > 0)
+                                        {
+                                            @DateTimeOffset.FromUnixTimeSeconds(item.updated.GetValueOrDefault()).ToString(Constants.DateTimePattern.DefaultDateTimePattern)
+                                        }
                                     }
                                 </td>
                                 <td>
