--- a/NongSanShop/Views/Category/Delete.cshtml
+++ b/NongSanShop/Views/Category/Delete.cshtml
@@ -6,18 +6,18 @@
 }
 
 <div class="container-fluid" style="text-align:center;">
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>
+        Bạn có chắc chắn muốn xóa không?
+    </h3>
     <div>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <input type="submit" value="Xóa" class="btn btn-danger" /> |
                 @Html.ActionLink("Quay lại", "Index")
             </div>
         }
     </div>
 </div>
-
-
