--- a/NongSanShop/Views/Category/Details.cshtml
+++ b/NongSanShop/Views/Category/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model NongSanShop.Models.dh_category
+﻿@using NongSanShop.Common
+@model NongSanShop.Models.dh_category
 
 @{
     ViewBag.Title = "Details";
@@ -32,8 +33,10 @@
 
             <dd>
                 @{
-                    var timeStampCreated = Model.created;
-                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampCreated.GetValueOrDefault()).ToString())
+                    if (Model.created.GetValueOrDefault() > 0)
+                    {
+                        @DateTimeOffset.FromUnixTimeSeconds(Model.created.GetValueOrDefault()).ToString(Constants.DateTimePattern.DefaultDateTimePattern)
+                    }
                 }
             </dd>
 
@@ -43,8 +46,10 @@
 
             <dd>
                 @{
-                    var timeStampUpdated = Model.updated;
-                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampUpdated.GetValueOrDefault()).ToString())
+                    if (Model.updated.GetValueOrDefault() > 0)
+                    {
+                        @DateTimeOffset.FromUnixTimeSeconds(Model.updated.GetValueOrDefault()).ToString(Constants.DateTimePattern.DefaultDateTimePattern)
+                    }
                 }
             </dd>
 
