--- a/NongSanShop/Views/Category/Edit.cshtml
+++ b/NongSanShop/Views/Category/Edit.cshtml
@@ -9,64 +9,66 @@
     @using (Html.BeginForm("Edit", "Category", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
-        <div class="form-horizontal">
-            <h4>Sửa</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.id)
+    <div class="form-horizontal">
+        <h4>Sửa</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.id)
 
-            <div class="form-group">
-                <label class="control-label col-md-2">Tên danh mục</label>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Tên danh mục</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Mô tả</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        @*<div class="form-group">
+            <label class="control-label col-md-2">Thời gian tạo</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.created, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.created, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Thời gian cập nhật</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.updated, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.updated, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+        @Html.HiddenFor(model => model.created)
+
+        @Html.HiddenFor(model => model.avatar)
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Ảnh minh họa</label>
+            @{
+                string ImagePath = "~/wwwroot/uploads/categories/" + Model.avatar;
+            }
+            <div class="col-md-10">
+                <img id="output" class="img-rounded" alt="Ảnh" width="150" height="150" src="@Url.Content(ImagePath)" />
+                <p><label for="ufile" style="cursor: pointer;">Chọn file ảnh</label></p>
+                <input name="ImageFile" type="file" id="ufile" style="display : none;" onchange="loadFile(event)" />
             </div>
 
             <div class="form-group">
-                <label class="control-label col-md-2">Mô tả</label>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            @*<div class="form-group">
-                <label class="control-label col-md-2">Thời gian tạo</label>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.created, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.created, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-2">Thời gian cập nhật</label>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.updated, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.updated, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-            
-            @Html.HiddenFor(model => model.avatar)
-
-            <div class="form-group">
-                <label class="control-label col-md-2">Ảnh minh họa</label>
-                @{
-                    string ImagePath = "~/wwwroot/uploads/categories/" + Model.avatar;
-                }
-                <div class="col-md-10">
-                    <img id="output" class="img-rounded" alt="Ảnh" width="150" height="150" src="@Url.Content(ImagePath)" />
-                    <p><label for="ufile" style="cursor: pointer;">Chọn file ảnh</label></p>
-                    <input name="ImageFile" type="file" id="ufile" style="display : none;" onchange="loadFile(event)" />
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Lưu" class="btn btn-success" />
-                    </div>
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Lưu" class="btn btn-success" />
                 </div>
             </div>
         </div>
+    </div>
     }
 
     <div>
