--- a/NongSanShop/Views/OrderProduct/Delete.cshtml
+++ b/NongSanShop/Views/OrderProduct/Delete.cshtml
@@ -5,53 +5,19 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="container-fluid" style="text-align:center;">
+    <h3>
+        Bạn có chắc chắn muốn xóa không?
+    </h3>
+    <div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>dh_order_product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.dh_order.address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.dh_order.address)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.dh_product.name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.dh_product.name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.quantity)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.quantity)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Xóa" class="btn btn-danger" /> |
+                @Html.ActionLink("Quay lại", "Index")
+            </div>
+        }
+    </div>
 </div>
