feature - admin authentication and authorization, implement new logger appender

--- a/NongSanShop/Views/Admin/Login.cshtml
+++ b/NongSanShop/Views/Admin/Login.cshtml
@@ -28,26 +28,26 @@
                                 @{ 
                                     string imgPath = "~/wwwroot/images/dogs/image1.jpeg";
                                 }
-                                <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;@Url.Content(imgPath)&quot;);"></div>
+                                <div class="flex-grow-1 bg-login-image" style="background-image: url(@Url.Content(imgPath));"></div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">Welcome Back!</h4>
                                     </div>
-                                    <form class="user">
-                                        <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email"></div>
-                                        <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password"></div>
+                                    <form class="user" method="post">
+                                        <div class="form-group"><input class="form-control form-control-user" type="text" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Nhập tên tài khoản..." name="username"></div>
+                                        <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Nhập mật khẩu" name="password"></div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1">Remember Me</label></div>
                                             </div>
-                                        </div><button class="btn btn-primary btn-block text-white btn-user" type="submit">Login</button>
-                                        <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" role="button"><i class="fab fa-google"></i>&nbsp; Login with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Login with Facebook</a>
+                                        </div><button class="btn btn-primary btn-block text-white btn-user" type="submit">Đăng nhập</button>
+                                        @* <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" role="button"><i class="fab fa-google"></i>&nbsp; Login with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Login with Facebook</a> *@
                                         <hr>
                                     </form>
-                                    <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
-                                    <div class="text-center"><a class="small" href="register.html">Create an Account!</a></div>
+                                    @* <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div> *@
+                                    @* <div class="text-center"><a class="small" href="register.html">Create an Account!</a></div> *@
                                 </div>
                             </div>
                         </div>
