--- a/NongSanShop/Views/Account/Create.cshtml
+++ b/NongSanShop/Views/Account/Create.cshtml
@@ -64,8 +64,14 @@
             <div class="form-group">
                 <label class="control-label col-md-2">Quyền</label>
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.role, "", new { @class = "text-danger" })
+                    @Html.DropDownList("role",
+                        new List<SelectListItem>
+                        {
+                            new SelectListItem {Text = "USER", Value = "1"},
+                            new SelectListItem {Text = "ADMIN", Value = "2"}
+                        },
+                        "Chọn phân quyền",
+                        new { @class = "form-control" })
                 </div>
             </div>
 
